[package]
name = "flatjson_to_xlsx"
version = "0.6.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
calamine = "0.21"                 # read existing values/headers
regex = "1.11"
toml = "0.8"
umya-spreadsheet = "2.3"       # tracks latest 2.3.x
